# PriceSage

./: .env.example  .gitignore  CHANGELOG.md  README.md  cruz_verde_scraper.py  formatted_comparison.md  output.md  pyproject.toml  tests & notes.ipynb
.github/workflows/: collect.yml  ip-probe.yml  tests.yml
99 manual collection/: 00 tests & notes.ipynb  01 formatted_comparison.md  notes.md
config/: products.yml
data/raw/: cruz_verde.jsonl
docs/: 00_Project Overview.docx  00_Project Overview.md  02_Redesign Plan.md  03_providers guide.md
src/pricesage/: __init__.py  __main__.py  alerts.py  config.py  errors.py  main.py  models.py  retry.py
src/pricesage/adapters/: __init__.py  base.py  cruz_verde.py
src/pricesage/storage/: __init__.py  db.py  debug.py  raw.py  schema.sql
tests/: test_alerts.py  test_cruz_verde.py  test_db.py  test_debug.py  test_logging.py  test_models.py  test_orchestrator.py  test_raw_storage.py  test_retry.py
tmp/: bad.yml
